--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,20 @@
 galaxy_info:
   role_name: files
   description: A wrapper for the Official File Module of Ansible.
+  min_ansible_version: 2.4
+  platforms:
+    - name: EL
+      versions:
+        - all
+    - name: Fedora
+      versions:
+        - all
+    - name: Amazon
+      versions:
+        - all
+    - name: Debian
+      versions:
+        - all
+    - name: Ubuntu
+      versions:
+        - all
